[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/palladium/ui/item.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
resource_local_to_scene = true
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.494118, 0.494118, 0.494118, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="item" type="PanelContainer"]
margin_right = 216.0
margin_bottom = 234.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="ItemBox" type="VBoxContainer" parent="."]
margin_left = 5.0
margin_top = 9.0
margin_right = 221.0
margin_bottom = 225.0
rect_min_size = Vector2( 216, 216 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LabelKey" type="Label" parent="ItemBox"]
margin_right = 216.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="ItemBox"]
margin_left = 26.0
margin_top = 18.0
margin_right = 190.0
margin_bottom = 182.0
rect_min_size = Vector2( 164, 164 )
size_flags_horizontal = 4
size_flags_vertical = 4
expand = true
stretch_mode = 7

[node name="LabelCount" type="Label" parent="ItemBox/TextureRect"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
text = "1"
align = 2
valign = 2

[node name="LabelDesc" type="Label" parent="ItemBox"]
margin_top = 186.0
margin_right = 216.0
margin_bottom = 216.0
rect_min_size = Vector2( 30, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0
align = 1
autowrap = true
